# strongswan

./: configure.ac
conf/: Makefile.am
conf/plugins/: balancer.opt  unglue-balancer.opt  unglue-cred.opt
src/libcharon/: Makefile.am
src/libcharon/plugins/balancer/: Makefile.am  balancer_plugin.c  balancer_plugin.h  balancer_provider.c  balancer_provider.h
src/libcharon/plugins/unglue_balancer/: Makefile.am  unglue_balancer_plugin.c  unglue_balancer_plugin.h  unglue_balancer_provider.c  unglue_balancer_provider.h
src/libcharon/plugins/unglue_cred/: Makefile.am  unglue_cred_plugin.c  unglue_cred_plugin.h
src/libstrongswan/plugins/pkcs11/: pkcs11_private_key.c
